caller/src/bindings.rs

#[test]
fn bindgen_test_layout_generalInf() {
    assert_eq!(
        ::std::mem::size_of::<generalInf>(),
        584usize,
        concat!("Size of: ", stringify!(generalInf))
    );
    assert_eq!(
        ::std::mem::align_of::<generalInf>(),
        4usize,
        concat!("Alignment of ", stringify!(generalInf))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).deviceId as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(deviceId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).flashSize as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(flashSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).type_ as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).cpu as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(cpu)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).name as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).series as *const _ as usize },
        132usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(series)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).description as *const _ as usize },
        232usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(description)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).revisionId as *const _ as usize },
        382usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(revisionId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<generalInf>())).board as *const _ as usize },
        482usize,
        concat!(
            "Offset of field: ",
            stringify!(generalInf),
            "::",
            stringify!(board)
        )
    );
}
#[doc = " \\struct  deviceSector"]
#[doc = " \\brief   Get device sectors basic informations."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct deviceSector {
    #[doc = "< Number of Sectors."]
    pub sectorNum: u32,
    #[doc = "< Sector Size in BYTEs."]
    pub sectorSize: u32,
}
#[test]
fn bindgen_test_layout_deviceSector() {
    assert_eq!(
        ::std::mem::size_of::<deviceSector>(),
        8usize,
        concat!("Size of: ", stringify!(deviceSector))
    );
    assert_eq!(
        ::std::mem::align_of::<deviceSector>(),
        4usize,
        concat!("Alignment of ", stringify!(deviceSector))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<deviceSector>())).sectorNum as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(deviceSector),
            "::",
            stringify!(sectorNum)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<deviceSector>())).sectorSize as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(deviceSector),
            "::",
            stringify!(sectorSize)
        )
    );
}
#[doc = " \\struct  externalLoader"]
#[doc = " \\brief   Get external Loader parameters to launch the process of programming an external flash memory."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct externalLoader {
    #[doc = "< FlashLoader file path."]
    pub filePath: [::std::os::raw::c_char; 200usize],
    #[doc = "< Device Name and Description."]
    pub deviceName: [::std::os::raw::c_char; 100usize],
    #[doc = "< Device Type: ONCHIP, EXT8BIT, EXT16BIT, ..."]
    pub deviceType: ::std::os::raw::c_int,
    #[doc = "< Default Device Start Address."]
    pub deviceStartAddress: u32,
    #[doc = "< Total Size of Device."]
    pub deviceSize: u32,
    #[doc = "< Programming Page Size."]
    pub pageSize: u32,
    #[doc = "< Type number."]
    pub sectorsTypeNbr: u32,
    #[doc = "< Device sectors."]
    pub sectors: *mut deviceSector,
}
#[test]
fn bindgen_test_layout_externalLoader() {
    assert_eq!(
        ::std::mem::size_of::<externalLoader>(),
        328usize,
        concat!("Size of: ", stringify!(externalLoader))
    );
    assert_eq!(
        ::std::mem::align_of::<externalLoader>(),
        8usize,
        concat!("Alignment of ", stringify!(externalLoader))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<externalLoader>())).filePath as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(externalLoader),
            "::",
            stringify!(filePath)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<externalLoader>())).deviceName as *const _ as usize },
        200usize,
        concat!(
            "Offset of field: ",
            stringify!(externalLoader),
            "::",
            stringify!(deviceName)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<externalLoader>())).deviceType as *const _ as usize },
        300usize,
        concat!(
            "Offset of field: ",
            stringify!(externalLoader),
            "::",
            stringify!(deviceType)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<externalLoader>())).deviceStartAddress as *const _ as usize
        },
        304usize,
        concat!(
            "Offset of field: ",
            stringify!(externalLoader),
            "::",
            stringify!(deviceStartAddress)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<externalLoader>())).deviceSize as *const _ as usize },
        308usize,
        concat!(
            "Offset of field: ",
            stringify!(externalLoader),
            "::",
            stringify!(deviceSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<externalLoader>())).pageSize as *const _ as usize },
        312usize,
        concat!(
            "Offset of field: ",
            stringify!(externalLoader),
            "::",
            stringify!(pageSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<externalLoader>())).sectorsTypeNbr as *const _ as usize },
        316usize,
        concat!(
            "Offset of field: ",
            stringify!(externalLoader),
            "::",
            stringify!(sectorsTypeNbr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<externalLoader>())).sectors as *const _ as usize },
        320usize,
        concat!(
            "Offset of field: ",
            stringify!(externalLoader),
            "::",
            stringify!(sectors)
        )
    );
}
#[doc = " \\struct  externalStorageInfo"]
#[doc = " \\brief   Get external storage informations useful for external Loader."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct externalStorageInfo {
    pub externalLoaderNbr: ::std::os::raw::c_uint,
    pub externalLoader: *mut externalLoader,
}
#[test]
fn bindgen_test_layout_externalStorageInfo() {
    assert_eq!(
        ::std::mem::size_of::<externalStorageInfo>(),
        16usize,
        concat!("Size of: ", stringify!(externalStorageInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<externalStorageInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(externalStorageInfo))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<externalStorageInfo>())).externalLoaderNbr as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(externalStorageInfo),
            "::",
            stringify!(externalLoaderNbr)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<externalStorageInfo>())).externalLoader as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(externalStorageInfo),
            "::",
            stringify!(externalLoader)
        )
    );
}
extern "C" {
    #[doc = " \\brief This routine allows to get ST-LINK conneted probe(s)."]
    #[doc = " \\param stLinkList  : Filled with the connected ST-LINK list and its default configurations."]
    #[doc = " \\param shared      : Enable shared mode allowing connection of two or more instances to the same ST-LINK probe."]
    #[doc = " \\return Number of the ST-LINK probes already exists."]
    #[doc = " \\warning The Share option is useful only with ST-LINK Server."]
    #[doc = " \\note  At the end of usage, #deleteInterfaceList must have been called."]
    pub fn getStLinkList(
        stLinkList: *mut *mut debugConnectParameters,
        shared: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start connection to device through SWD or JTAG interfaces."]
    #[doc = " \\param debugParameters : Indicates customized configuration for ST-LINK connection,"]
    #[doc = " It is recommended to check [debugConnectParameters] fields before connection."]
    #[doc = " \\return 0 if the connection successfully established, otherwise an error occurred."]
    pub fn connectStLink(debugParameters: debugConnectParameters) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine used to apply a target reset."]
    #[doc = " \\note  Reset operation is only available with JTAG/SWD debug interface."]
    #[doc = " \\param rstMode : Indicates the reset type Soft/Hard/Core #debugResetMode. \\n"]
    #[doc = " \\return 0 if the reset operation finished successfully, otherwise an error occurred."]
    pub fn reset(rstMode: debugResetMode) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to get connected serial ports."]
    #[doc = " \\param usartList : Receive serial ports list and its default configurations."]
    #[doc = " \\return Number of serial ports already connected."]
    #[doc = " \\note  At the end of usage, #deleteInterfaceList must have been called."]
    pub fn getUsartList(usartList: *mut *mut usartConnectParameters) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start connection to device through USART interface."]
    #[doc = " \\param usartParameters : Indicates customized configuration for USART connection."]
    #[doc = " \\return 0 if the connection successfully established, otherwise an error occurred."]
    pub fn connectUsartBootloader(usartParameters: usartConnectParameters)
        -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to send a single byte through the USART interface."]
    #[doc = " \\param byte : The data to be written"]
    #[doc = " \\return 0 if the sending operation correctly achieved, otherwise an error occurred."]
    pub fn sendByteUart(byte: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
